--- a/JavaScript/JavaScript Fundamentals - Part 1/style.css
+++ b/JavaScript/JavaScript Fundamentals - Part 1/style.css
@@ -1,4 +1,15 @@
-.title {
-	font-weight: bold;
-	font-size: 30px;
+body {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	background: linear-gradient(to top left, #28b487, #7dd56f);
+}
+h1 {
+	font-family: sans-serif;
+	font-size: 50px;
+	line-height: 1.3;
+	width: 100%;
+	padding: 30px;
+	text-align: center;
+	color: white;
 }
