--- a/JavaScript/JavaScript in the Brower Dom and Events/Style_Guess.css
+++ b/JavaScript/JavaScript in the Brower Dom and Events/Style_Guess.css
@@ -51,5 +51,74 @@ h1 {
 	text-align: center;
 	/* absolute : 위치를 절대적으로 맞춘다.
 	주의 사항 : 상위 요소에서 배치기준 설정.만약 상위 (static 이 아닌)요소 없으면 최상위 요소 기준*/
-	position: absolute
+	position: absolute;
+	width: 100%;
+	top: 52%;
+	left: 50%;
+	/* transform :  translate(x,y) 요소를  x축 과 y축 만큼 이동시킴 */
+	/* 이경우에는 position: absolute 로 상위 header 요소에 묶여있고
+	   header 자기 원래 위치 기준으로 x축,y축 만큼 이동*/
+	transform: translate(-50%,-50%);
+}
+
+.number {
+	background: #eee;
+	color : #333;
+	font-size: 6rem;
+	width: 15rem;
+	padding: 3rem 0rem;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%,50%);
+}
+.between {
+	font-size: 1.4rem;
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+}
+
+.again {
+	position : absolute;
+	top: 2rem;
+	left: 2rem;
+}
+
+.guess {
+	background : none;
+	border: 4px solid #eee;
+	/* inherit : 부모 요소로부터 받아오기 */
+	font-family: inherit;
+	color : inherit;
+	font-size: 5rem;
+	padding: 2.5rem;
+	width: 25rem;
+	text-align: center;
+	/* block : 영역 전체를 나타낸다(기본 값: width :100%; height: 100%; */
+	display: block;
+	margin-bottom: 3rem;
+}
+
+.btn {
+	border: none;
+	background-color: #eee;
+	color: #222;
+	font-size: 2rem;
+	font-family: inherit;
+	padding: 2rem 3rem;
+	cursor : pointer;
+}
+
+.btn : hover {
+	background-color: #ccc;
+}
+
+.message {
+	margin-bottom: 8rem;
+	height: 3rem;
+}
+.label-score {
+	margin-bottom: 2rem;
 }
